--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,66 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/school_grade1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/gray"
+        android:hint="Nota 1"
+        android:padding="20dp"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/school_grade2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@color/gray"
+        android:hint="Nota 2"
+        android:padding="20dp"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/school_grade3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/school_grade1"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/gray"
+        android:hint="Nota 3"
+        android:padding="20dp"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/school_grade4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/school_grade2"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:background="@color/gray"
+        android:hint="Nota 4"
+        android:padding="20dp"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/absences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/school_grade3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@color/gray"
+        android:hint="Número de faltas"
+        android:padding="20dp"
+        android:text="" />
 
 
 </RelativeLayout>
