--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
         android:layout_marginTop="50dp"
         android:background="@color/gray"
         android:hint="Nota 1"
+        android:inputType="numberDecimal"
+        android:maxLength="3"
         android:padding="20dp"
         android:text="" />
 
@@ -27,6 +29,8 @@
         android:layout_marginRight="50dp"
         android:background="@color/gray"
         android:hint="Nota 2"
+        android:inputType="numberDecimal"
+        android:maxLength="3"
         android:padding="20dp"
         android:text="" />
 
@@ -39,6 +43,8 @@
         android:layout_marginTop="50dp"
         android:background="@color/gray"
         android:hint="Nota 3"
+        android:inputType="numberDecimal"
+        android:maxLength="3"
         android:padding="20dp"
         android:text="" />
 
@@ -52,6 +58,8 @@
         android:layout_marginRight="50dp"
         android:background="@color/gray"
         android:hint="Nota 4"
+        android:inputType="numberDecimal"
+        android:maxLength="4"
         android:padding="20dp"
         android:text="" />
 
@@ -64,6 +72,8 @@
         android:layout_marginTop="50dp"
         android:background="@color/gray"
         android:hint="Número de faltas"
+        android:inputType="numberDecimal"
+        android:maxLength="3"
         android:padding="20dp"
         android:text="" />
 
@@ -79,6 +89,16 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/text_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_calculate"
+        android:text="Aluno foi Aprovado"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
 
