--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_calculate"
-        android:text="Aluno foi Aprovado"
+        android:text=""
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
