--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:maxLength="3"
         android:padding="20dp"
         android:text=""
-        android:textAlignment="center" />
+        android:gravity="center" />
 
     <EditText
         android:id="@+id/school_grade2"
@@ -34,7 +34,7 @@
         android:maxLength="3"
         android:padding="20dp"
         android:text=""
-        android:textAlignment="center" />
+        android:gravity="center" />
 
     <EditText
         android:id="@+id/school_grade3"
@@ -49,7 +49,7 @@
         android:maxLength="3"
         android:padding="20dp"
         android:text=""
-        android:textAlignment="center" />
+        android:gravity="center" />
 
     <EditText
         android:id="@+id/school_grade4"
@@ -65,7 +65,7 @@
         android:maxLength="4"
         android:padding="20dp"
         android:text=""
-        android:textAlignment="center" />
+        android:gravity="center" />
 
     <EditText
         android:id="@+id/absences"
@@ -80,7 +80,7 @@
         android:maxLength="3"
         android:padding="20dp"
         android:text=""
-        android:textAlignment="center" />
+        android:gravity="center" />
 
     <Button
         android:id="@+id/btn_calculate"
@@ -101,8 +101,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_calculate"
+        android:gravity="center"
         android:text=""
-        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
 
